<resources>
    <string name="app_name">Alura Viagens (Constraint Layout)</string>
    <string name="especiais">Especiais</string>
    <string name="brasil">Brasil</string>
    <string name="banner">Banner</string>
    <string name="realizar_pagamento">REALIZAR PAGAMENTO</string>
    <string name="mascara_nome_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_cartao">Número do Cartão</string>
    <string name="cartao_mes">MM</string>
    <string name="cartao_ano">AA</string>
    <string name="cartao_cvc">CVC</string>
    <string name="cartao_nome">Nome no cartão</string>
    <string name="botao_finalizar_compra">FINALIZAR COMPRA</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada">Compra realizada com sucesso</string>
    <string name="confira_resumo">Confira o resumo da compra:</string>
</resources>
