<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/orientacao_pagamento"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/pagamento_valor_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pagamento_valor_compra"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_compra"
        tools:text="R$ 421,50" />

    <!--
    android:maxLength="12" = número máximo de caracteres que o campo aceitará
    android:inputType="number" = aceitará somente números
    android:hint="Número do Cartão" = placeholder que informará o que deve ser preenchido

    -->
    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/numero_cartao"
        android:maxLength="12"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pagamento_ano_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/cartao_mes"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_numero_cartao"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pagamento_mes_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/cartao_ano"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toEndOf="@+id/pagamento_ano_cartao"
        android:importantForAutofill="no" />

    <!--
    android:drawableStart="@drawable/ic_cvc_cartao_de_credito" = inserindo uma imagem no início da
    inserção de texto. Nosso EditText terá uma imagem de um cartão e um espaço para inserir os dígitos.
    -->
    <EditText
        android:id="@+id/pagamento_cvc_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cartao_cvc"
        android:inputType="number"
        android:maxLength="3"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_numero_cartao"
        android:importantForAutofill="no" />

    <!--
    android:inputType="text" = aceita textos
    android:digits= defino todos os carateres que meu campo de texto receberá
    -->
    <EditText
        android:id="@+id/pagamento_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cartao_nome"
        android:inputType="text"
        android:digits="@string/mascara_nome_cartao"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_ano_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_mes_cartao"
        android:importantForAutofill="no" />

    <!--
    android:background="@drawable/botao_redondo_laranja" = inserindo o backround que criamos
    nas aulas passadas.
    -->
    <Button
        android:id="@+id/pagamento_botao_finalizar_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/botao_finalizar_compra"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_nome_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_nome_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_nome_cartao" />

</android.support.constraint.ConstraintLayout>